Added black and pep8 checks

--- a/notebooks/revenue-prediction.ipynb
+++ b/notebooks/revenue-prediction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Predicting revenue from data."
+    "# Predicting revenue from ARGA data."
    ]
   },
   {
